# vault

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/kr/scin/app/: GeumgoAutofillService.kt  (+2 more)
app/android/app/src/main/res/xml/: autofill_service.xml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app_state.dart  entry_tools.dart  main.dart  security_tools.dart  theme.dart  widgets.dart
app/lib/pages/: archive_page.dart  data_page.dart  entry_detail_page.dart  entry_edit_page.dart  generator_page.dart  home_page.dart  join_page.dart  security_page.dart  sync_page.dart  unlock_page.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: audit.dart  sync.dart  vault.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugins.cmake
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: android_ffi.rs  audit.rs  mod.rs  sync.rs  vault.rs
app/rust_builder/ios/: rust_lib_app.podspec
app/rust_builder/macos/: rust_lib_app.podspec
app/test/: entry_tools_test.dart  security_tools_test.dart
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml
core/src/: audit.rs  crypto.rs  error.rs  generator.rs  lib.rs  model.rs  portable.rs  storage.rs  totp.rs  vault.rs
docs/: android-release-signing.md
server/: Cargo.toml  Dockerfile
server/src/: main.rs
(+3 files in other folders)
