[package]
name = "geumgo-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Geumgo password manager — security core (crypto, vault, storage)"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
base64 = "0.22"
data-encoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
zxcvbn = "3"
hex = "0.4"
