[package]
name = "geumgo-server"
version = "0.1.0"
edition = "2021"
description = "Geumgo zero-knowledge sync server — stores only encrypted blobs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
anyhow = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
